Fix alignment of inline buttons

--- a/src/scss/phy/my-account.scss
+++ b/src/scss/phy/my-account.scss
@@ -54,11 +54,6 @@
   }
 }
 
-p .btn-link {
-  font-size: 1rem;
-  margin-top: 3px;
-}
-
 .section-divider-bold {
   margin: 2rem 0;
 }
